Fixed align of names in popup

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
   text-decoration: none;
   color: #757575;
 }
-.menu-item img {
+.menu-item-img {
   box-sizing: border-box;
   width: 25px;
 }
@@ -48,7 +48,7 @@ body {
   z-index: 1;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   transition: height 0.3s ease-in-out 0s;
-  right: 115px;
+  right: 95px;
   max-height: calc(-65px + 100vh);
   visibility: hidden;
 }
@@ -104,12 +104,8 @@ body {
   flex-wrap: wrap;
   list-style: none;
   text-decoration: none;
-  justify-content: space-around;
   align-items: center;
-}
-.tooltip-item a img {
-  width: 45px;
-  margin-bottom: 15px;
+  justify-content: space-between;
 }
 .tooltip-item .width-30 {
   width: 30px;
@@ -203,4 +199,10 @@ body {
   width: 16px;
   background-position: center 2px;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='0,0 100,0 50,50'/></svg>");
+}
+
+@media only screen and (max-width: 768px) {
+  .tooltip {
+    right: 15px;
+  }
 }
